--- a/documentation/building-the-client.html
+++ b/documentation/building-the-client.html
@@ -2,6 +2,7 @@
 layout: documentation
 title: Building The Client
 slug: documentation
+side_nav: building-the-client
 base_url: "/"
 ---
 
@@ -32,10 +33,10 @@ base_url: "/"
 
 	<p>To download and build the MacPatch client agent software there are just a couple of Terminal commands to run.</p>
 
-	<pre><code>• sudo mkdir -p /Library/MacPatch/tmp
-	• cd /Library/MacPatch/tmp
-	• sudo git clone https://github.com/SMSG-MAC-DEV/MacPatch.git
-	• sudo /Library/MacPatch/tmp/MacPatch/scripts/MPBuildClient.sh
+	<pre><code>sudo mkdir -p /Library/MacPatch/tmp
+cd /Library/MacPatch/tmp
+sudo git clone https://github.com/SMSG-MAC-DEV/MacPatch.git
+sudo /Library/MacPatch/tmp/MacPatch/scripts/MPBuildClient.sh
 	</code></pre>
 
 	<p>Once the compile and copy process is completed the finished client agent software can be found in "<strong>/Library/MacPatch/tmp/Client/Combined/MPClientInstall.pkg.zip</strong>"</p>
