--- a/documentation/custom-patch-content.html
+++ b/documentation/custom-patch-content.html
@@ -2,158 +2,174 @@
 layout: documentation
 title: Custom Patch Content
 slug: documentation
+side_nav: custom-patch-content
 base_url: "/"
 ---
 
 
+<style>
+table {
+	margin: 10px 0 15px 0;
+	border-collapse: collapse;
+}
+td,th {	
+	border: 1px solid #ddd;
+	padding: 3px 10px;
+}
+th {
+	padding: 5px 10px;	
+}
+</style>
+
+
 <div class="container" id="content">
-	<h1>MacPatch - Custom Patch Content</h1>
 
-	<p><strong>Version 1.0 for MacPatch v2.5.x</strong></p>
+    <h1>MacPatch - Custom Patch Content</h1>
 
-	<p>MacPatch custom patch content is pretty simple to create. All content is created via the new content wizard. Keep in mind that there are only 4 required attributes which are required to create a patch. The 4 attributes are <strong>Patch Name, Patch Version, Patch Group ID, Patch Package</strong>.</p>
+    <p><strong>Version 1.0 for MacPatch v2.5.x</strong></p>
 
-	<h3>Create New Patch</h3>
+    <p>MacPatch custom patch content is pretty simple to create. All content is created via the new content wizard. Keep in mind that there are only 4 required attributes which are required to create a patch. The 4 attributes are <strong>Patch Name, Patch Version, Patch Group ID, Patch Package</strong>.</p>
 
-	<p>Creating a new patch is broken down in to 4 steps. In this example we will be creating a patch for Firefox.</p>
+    <h3>Create New Patch</h3>
 
-	<h5>Step 1</h5>
+    <p>Creating a new patch is broken down in to 4 steps. In this example we will be creating a patch for Firefox.</p>
 
-	<p><img src="images/Patch-Step1.png" alt="" /></p>
+    <h5>Step 1</h5>
 
-	<p><strong>Patch Name, and Patch Version </strong>are required fields. By default a new patch has it's patch state set to "Create". A patch will not show as needed to a client until it's state is at least set to "QA".</p>
+    <p><img src="images/Patch-Step1.png" alt="" /></p>
 
-	<h5>Step 2</h5>
+    <p><strong>Patch Name, and Patch Version </strong>are required fields. By default a new patch has it's patch state set to "Create". A patch will not show as needed to a client until it's state is at least set to "QA".</p>
 
-	<p><img src="images/Patch-Step2.png" alt="" /></p>
+    <h5>Step 2</h5>
 
-	<p>While none of the fields are required, adding patch detection criteria is highly recommended. In this example we have added two detection queries. The first one looks to see if the <strong>/Applications/Firefox.app</strong> exists. The second query looks to see if Firefox version is less than 30.0.0.</p>
+    <p><img src="images/Patch-Step2.png" alt="" /></p>
 
-	<p>For a patch to become required all patch detection criteria queries need to return <em>True</em>. If any return false a patch is not needed.</p>
+    <p>While none of the fields are required, adding patch detection criteria is highly recommended. In this example we have added two detection queries. The first one looks to see if the <strong>/Applications/Firefox.app</strong> exists. The second query looks to see if Firefox version is less than 30.0.0.</p>
 
-	<p><a href="#cheatSheet">Query Language Cheat Sheet</a></p>
+    <p>For a patch to become required all patch detection criteria queries need to return <em>True</em>. If any return false a patch is not needed.</p>
 
-	<h5>Step 3</h5>
+    <p><a href="#cheatSheet">Query Language Cheat Sheet</a></p>
 
-	<p><img src="images/Patch-Step3.png" alt="" /></p>
+    <h5>Step 3</h5>
 
-	<p><strong>Patch Group ID, and Patch Package </strong>are required fields.</p>
+    <p><img src="images/Patch-Step3.png" alt="" /></p>
 
-	<p>In this example it's important to note that the "Patch Group ID" is in the form Reverse URL and similar to Bundle ID. While anything can be used as a "Patch Group ID", bundle id's are suggested.</p>
+    <p><strong>Patch Group ID, and Patch Package </strong>are required fields.</p>
 
-	<p>When uploading a patch a *.pkg.zip file is required at this time.</p>
+    <p>In this example it's important to note that the "Patch Group ID" is in the form Reverse URL and similar to Bundle ID. While anything can be used as a "Patch Group ID", bundle id's are suggested.</p>
 
-	<h5>Step 4</h5>
+    <p>When uploading a patch a *.pkg.zip file is required at this time.</p>
 
-	<p><img src="images/Patch-Step4.png" alt="" /></p>
+    <h5>Step 4</h5>
 
-	<p>Here you can add pre &amp; post requisite packages. Also, once the patch is created you will need to make it active. This can only be done once the initial patch has been created.</p>
+    <p><img src="images/Patch-Step4.png" alt="" /></p>
 
-	<h3>Patch Criteria Language - Cheat Sheet <a name="cheatSheet"></a></h3>
+    <p>Here you can add pre &amp; post requisite packages. Also, once the patch is created you will need to make it active. This can only be done once the initial patch has been created.</p>
 
-	<table>
-	<tr>
-	<th>Base Criteria</th>
-	<th>Description</th>
-	</tr>
-	<tr>
-	<td>BundleID</td>
-	<td>
-	<table id="sampleInner">
-	<tr>
-	<th>Query</th>
-	<th>Value</th>
-	<th>Query Result</th>
-	<th>Example Syntax</th>
-	</tr>
-	<tr>
-	<td>Exists</td>
-	<td>BundleID Value</td>
-	<td>True/False</td>
-	<td>Exists@com.adobe.Reader@True</td>
-	</tr>
-	<tr>
-	<td>Version</td>
-	<td>BundleID Value</td>
-	<td>Version;(EQ,LT,LTE,GT,GTE,NEQ)</td>
-	<td>Version@com.adobe.Reader@9.3.0;LT</td>
-	</tr>
-	</table>
-	</td>
-	</tr>
-	<tr>
-	<td>File</td>
-	<td>
-	<table id="sampleInner">
-	<tr>
-	<th>Query</th>
-	<th>Value</th>
-	<th>Query Result</th>
-	<th>Example Syntax</th>
-	</tr>
-	<tr>
-	<td>Exists</td>
-	<td>File Path</td>
-	<td>True/False</td>
-	<td>Exists@/Applications/Firefox.app@True</td>
-	</tr>
-	<tr>
-	<td>Date</td>
-	<td>File Path</td>
-	<td>True/False</td>
-	<td>Date@/Applications/Firefox.app@2010-03-22 12:00:00;LT</td>
-	</tr>
-	<tr>
-	<td>Hash</td>
-	<td>File Path</td>
-	<td>MD5 Hash;True/False</td>
-	<td>Hash@/Applications/Firefox.app@123432dsh2362h3h;TRUE</td>
-	</tr>
-	<tr>
-	<td>Version</td>
-	<td>File Path</td>
-	<td>Version;(EQ,LT,LTE,GT,GTE,NEQ)</td>
-	<td>Version@/Applications/Firefox.app@3.5.7;LT</td>
-	</tr>
-	</table>
-	</td>
-	<tr>
-	<td>Script</td>
-	<td>
-	<table id="sampleInner">
-	<tr>
-	<th>Query</th>
-	<th>Value</th>
-	<th>Query Result</th>
-	<th>Example Syntax</th>
-	<th>Notes</th>
-	</tr>
-	<tr>
-	<td>Script</td>
-	<td>Script Text</td>
-	<td>True</td>
-	<td>#!/bin/sh ...</td>
-	<td>If a @ is used it must be escaped with @</td>
-	</tr>
-	</table>
-	</td>
-	</tr>
-	</tr>
-	</table>
+    <h3>Patch Criteria Language - Cheat Sheet <a name="cheatSheet"></a></h3>
+
+    <table>
+        <tr>
+            <th>Base Criteria</th>
+            <th>Description</th>
+        </tr>
+        <tr>
+            <td>BundleID</td>
+            <td>
+                <table id="sampleInner">
+                    <tr>
+                        <th>Query</th>
+                        <th>Value</th>
+                        <th>Query Result</th>
+                        <th>Example Syntax</th>
+                    </tr>
+                    <tr>
+                        <td>Exists</td>
+                        <td>BundleID Value</td>
+                        <td>True/False</td>
+                        <td>Exists@com.adobe.Reader@True</td>
+                    </tr>
+                    <tr>
+                        <td>Version</td>
+                        <td>BundleID Value</td>
+                        <td>Version;(EQ,LT,LTE,GT,GTE,NEQ)</td>
+                        <td>Version@com.adobe.Reader@9.3.0;LT</td>
+                    </tr>
+                </table>
+            </td>
+        </tr>
+        <tr>
+            <td>File</td>
+            <td>
+                <table id="sampleInner">
+                    <tr>
+                        <th>Query</th>
+                        <th>Value</th>
+                        <th>Query Result</th>
+                        <th>Example Syntax</th>
+                    </tr>
+                    <tr>
+                        <td>Exists</td>
+                        <td>File Path</td>
+                        <td>True/False</td>
+                        <td>Exists@/Applications/Firefox.app@True</td>
+                    </tr>
+                    <tr>
+                        <td>Date</td>
+                        <td>File Path</td>
+                        <td>True/False</td>
+                        <td>Date@/Applications/Firefox.app@2010-03-22 12:00:00;LT</td>
+                    </tr>
+                    <tr>
+                        <td>Hash</td>
+                        <td>File Path</td>
+                        <td>MD5 Hash;True/False</td>
+                        <td>Hash@/Applications/Firefox.app@123432dsh2362h3h;TRUE</td>
+                    </tr>
+                    <tr>
+                        <td>Version</td>
+                        <td>File Path</td>
+                        <td>Version;(EQ,LT,LTE,GT,GTE,NEQ)</td>
+                        <td>Version@/Applications/Firefox.app@3.5.7;LT</td>
+                    </tr>
+                </table>
+            </td>
+            <tr>
+                <td>Script</td>
+                <td>
+                    <table id="sampleInner">
+                        <tr>
+                            <th>Query</th>
+                            <th>Value</th>
+                            <th>Query Result</th>
+                            <th>Example Syntax</th>
+                            <th>Notes</th>
+                        </tr>
+                        <tr>
+                            <td>Script</td>
+                            <td>Script Text</td>
+                            <td>True</td>
+                            <td>#!/bin/sh ...</td>
+                            <td>If a @ is used it must be escaped with @</td>
+                        </tr>
+                    </table>
+                </td>
+            </tr>
+        </tr>
+    </table>
 
 
-	<h4>Testing Patch Content</h4>
+    <h4>Testing Patch Content</h4>
 
-	<p>To test patch content you will need to edit the client settings those clients deemed as QA clients. This is done by creating a new patch group with the "QA" type and editing the clients config plist.</p>
+    <p>To test patch content you will need to edit the client settings those clients deemed as QA clients. This is done by creating a new patch group with the "QA" type and editing the clients config plist.</p>
 
-	<p>Change PatchGroup</p>
+    <p>Change PatchGroup</p>
 
-	<pre><code>defaults write /Library/Preferences/gov.llnl.mpagent.plist PatchGroup RecommendedPatchesQA
-	</code></pre>
+    <pre><code>defaults write /Library/Preferences/gov.llnl.mpagent.plist PatchGroup RecommendedPatchesQA
+    </code></pre>
 
-	<p>Allow QA Patches to be installed</p>
+    <p>Allow QA Patches to be installed</p>
 
-	<pre><code>defaults write /Library/Preferences/gov.llnl.mpagent.plist PatchState All
-	</code></pre>
-
+    <pre><code>defaults write /Library/Preferences/gov.llnl.mpagent.plist PatchState All
+    </code></pre>
 </div>
