fixed issues with docs

--- a/documentation/building-the-client.html
+++ b/documentation/building-the-client.html
@@ -6,8 +6,7 @@ side_nav: building-the-client
 base_url: "/"
 ---
 
-
-<div class="container" id="content">
+<div class="container-fluid" id="content">
 	<h1>MacPatch - Building the Client Agent</h1>
 
 	<p><strong>Version 1.0 for MacPatch v2.5.x</strong></p>
