--- a/documentation/custom-patch-content.html
+++ b/documentation/custom-patch-content.html
@@ -7,22 +7,9 @@ base_url: "/"
 ---
 
 
-<style>
-table {
-	margin: 10px 0 15px 0;
-	border-collapse: collapse;
-}
-td,th {	
-	border: 1px solid #ddd;
-	padding: 3px 10px;
-}
-th {
-	padding: 5px 10px;	
-}
-</style>
 
 
-<div class="container" id="content">
+<div class="container-fluid" id="content">
 
     <h1>MacPatch - Custom Patch Content</h1>
 
@@ -68,7 +55,7 @@ th {
 
     <h3>Patch Criteria Language - Cheat Sheet <a name="cheatSheet"></a></h3>
 
-    <table>
+    <table class="table table-bordered table-striped">
         <tr>
             <th>Base Criteria</th>
             <th>Description</th>
@@ -76,7 +63,7 @@ th {
         <tr>
             <td>BundleID</td>
             <td>
-                <table id="sampleInner">
+                <table class="table table-bordered table-striped">
                     <tr>
                         <th>Query</th>
                         <th>Value</th>
@@ -101,7 +88,7 @@ th {
         <tr>
             <td>File</td>
             <td>
-                <table id="sampleInner">
+                <table class="table table-bordered table-striped">
                     <tr>
                         <th>Query</th>
                         <th>Value</th>
@@ -137,7 +124,7 @@ th {
             <tr>
                 <td>Script</td>
                 <td>
-                    <table id="sampleInner">
+                    <table class="table table-bordered table-striped">
                         <tr>
                             <th>Query</th>
                             <th>Value</th>
