--- a/documentation/install-distribution-server.html
+++ b/documentation/install-distribution-server.html
@@ -6,7 +6,7 @@ side_nav: install-distribution-server
 base_url: "/"
 ---
 
-<div class="container" id="content">
+<div class="container-fluid" id="content">
 	<h1>MacPatch - Install Distribution Server(s)</h1>
 
 	<p>When the first server ("Master") is compiled and built it will create a file called "MacPatch_Server.zip" in /Library/MacPatch. This zip file is a complete copy of the master server build in a unconfigured state. Simply copy the "MacPatch_Server.zip" to your new distribution server.</p>
