--- a/documentation/quickstart-linux.html
+++ b/documentation/quickstart-linux.html
@@ -6,21 +6,7 @@ side_nav: quickstart-linux
 base_url: "/"
 ---
 
-<style>
-table {
-    margin: 10px 0 15px 0;
-    border-collapse: collapse;
-}
-td,th { 
-    border: 1px solid #ddd;
-    padding: 3px 10px;
-}
-th {
-    padding: 5px 10px;  
-}
-</style>
-
-<div class="container" id="content">
+<div class="container-fluid" id="content">
     <h1>MacPatch - Quick Start Guide for Linux</h1>
 
     <p><strong>Version 1.0 for MacPatch v2.5.x</strong></p>
@@ -135,7 +121,7 @@ mysql&gt; quit
 
         <p>The MacPatch server has five configuration script and should be run in the given order. The scripts are located on the server in <strong>/Library/MacPatch/Server/conf/scripts/Setup/</strong>.</p>
 
-        <table>
+        <table class="table table-bordered table-striped">
             <tr>
                 <th>Script</th>
                 <th>Description</th>
