--- a/overview.html
+++ b/overview.html
@@ -95,7 +95,7 @@ base_url: "./"
           </div>
           <div class="panel-body">
             <small><a class="pull-right" href="#content">go to top</a></small>
-            <p>To get MacPatch up and running first clone the project and review the "MacPatch – Server Install.pdf" file in the docs folder.</p>
+            <p>To get MacPatch up and running first clone the project then review the <a href="{{ page.base_url }}documentation/quickstart-osx.html">documentation.</a></p>
             <pre>mkdir -p /Library/MacPatch/tmp
 cd /Library/MacPatch/tmp
 git clone https://github.com/SMSG-MAC-DEV/MacPatch.git</pre>
