--- a/documentation/quickstart-osx.html
+++ b/documentation/quickstart-osx.html
@@ -32,6 +32,13 @@ base_url: "/"
     <p><em>Install Xcode</em><br>
     <strong>% xcode-select --install</strong></p>
 
+    <h3>PIP (Python Modules)</h3>
+
+    <pre>pip install requests
+pip install python-crontab
+pip install argparse
+    </pre>
+
     <h2>Download and build the Server software</h2>
 
     <p>To download and build the MacPatch server software is just a few Terminal commands. Run the following commands to build and install the software.</p>
