--- a/documentation/building-the-client.html
+++ b/documentation/building-the-client.html
@@ -19,7 +19,7 @@ base_url: "/"
 
 	<h3>Xcode</h3>
 
-	<p>Xcode is required to build the MacPatch software for Mac OS X. While you can install the GUI version of Xcode and download and install the command line tools from within Xcode. You will be installing the Xcode command line tools from the Terminal.app.</p>
+	<p>Xcode is required to build the MacPatch software for Mac OS X.</p>
 
 	<p><em>Test for Xcode</em><br>
 	<strong>% xcode-select --version</strong><br>
