--- a/documentation/building-the-client.html
+++ b/documentation/building-the-client.html
@@ -28,6 +28,8 @@ base_url: "/"
 	<p><em>Install Xcode</em><br>
 	<strong>% xcode-select --install</strong></p>
 
+	<p><em>Install Xcode from App Store</em><br>
+
 	<h2>Download and build the agent</h2>
 
 	<p>To download and build the MacPatch client agent software there are just a couple of Terminal commands to run.</p>
