DataBaseLDAPSetup is a .py now

--- a/documentation/quickstart-osx.html
+++ b/documentation/quickstart-osx.html
@@ -107,7 +107,7 @@ mysql&gt; quit
             <th>Server/Is Required</th>
         </tr>
         <tr>
-            <td>DataBaseLDAPSetup.sh </td>
+            <td>DataBaseLDAPSetup.py </td>
             <td>The database setup is required for MacPatch to function.</td>
             <td>Master/Required</td>
         </tr>
