added easy_install pip for those that don't already have pip. Also added [sudo] to pip commands

--- a/documentation/quickstart-osx.html
+++ b/documentation/quickstart-osx.html
@@ -34,8 +34,9 @@ base_url: "/"
 
     <h3>PIP (Python Modules)</h3>
 
-    <pre>pip install requests
-pip install argparse
+    <pre>[sudo] easy_install pip  # if you don't already have pip
+[sudo] pip install requests
+[sudo] pip install argparse
     </pre>
 
     <h2>Download and build the Server software</h2>
