added sudo to commands that need it

--- a/documentation/quickstart-linux.html
+++ b/documentation/quickstart-linux.html
@@ -52,9 +52,9 @@ sudo yum install mysql-connector-python
 
     <h5>PIP (Python Modules)</h5>
 
-    <pre>pip install requests
-pip install python-crontab
-pip install argparse
+    <pre>sudo pip install requests
+sudo pip install python-crontab
+sudo pip install argparse
     </pre>
 
     <h2>Download and build the Server software</h2>
