fixed omitted "yum install"

--- a/documentation/quickstart-linux.html
+++ b/documentation/quickstart-linux.html
@@ -41,7 +41,7 @@ sudo apt-get install python-mysql.connector
     <pre>sudo yum install gcc-c++
 sudo yum install git
 sudo yum install openssl-devel
-sudo java-1.7.0-openjdk-devel
+sudo yum install java-1.7.0-openjdk-devel
 sudo yum install libxml2-devel
 sudo yum install bzip2
 sudo yum install bzip2-libs
