--- a/documentation/ldap-configuration.html
+++ b/documentation/ldap-configuration.html
@@ -7,6 +7,8 @@ base_url: "/"
 ---
 
 <div class="container-fluid" id="content">
+    <h1>MacPatch LDAP/Active Directory Authentication</h1>
+    
     <p><strong>Version 1.0 for MacPatch v2.6.x</strong></p>
 
     <p>To enable LDAP/Active Directory Authentication in MacPatch is a very simple task but may require tweaking for your specific environment.</p>
