Removed "MacPatch -" from the heading of the docs pages.

--- a/documentation/quickstart-osx.html
+++ b/documentation/quickstart-osx.html
@@ -7,7 +7,7 @@ base_url: "/"
 ---
 
 <div class="container-fluid" id="content">
-    <h1>MacPatch - Quick Start Guide for Mac OS X</h1>
+    <h1>Quick Start Guide for Mac OS X</h1>
 
     <p><strong>Version 1.0 for MacPatch v2.5.x</strong></p>
 
