--- a/documentation/building-the-client.html
+++ b/documentation/building-the-client.html
@@ -7,7 +7,7 @@ base_url: "/"
 ---
 
 <div class="container-fluid" id="content">
-	<h1>MacPatch - Building the Client Agent</h1>
+	<h1>Building the Client Agent</h1>
 
 	<p><strong>Version 1.0 for MacPatch v2.5.x</strong></p>
 
