--- a/documentation/custom-patch-content.html
+++ b/documentation/custom-patch-content.html
@@ -11,7 +11,7 @@ base_url: "/"
 
 <div class="container-fluid" id="content">
 
-    <h1>MacPatch - Custom Patch Content</h1>
+    <h1>Custom Patch Content</h1>
 
     <p><strong>Version 1.0 for MacPatch v2.5.x</strong></p>
 
