--- a/documentation/ldap-configuration.html
+++ b/documentation/ldap-configuration.html
@@ -7,7 +7,7 @@ base_url: "/"
 ---
 
 <div class="container-fluid" id="content">
-    <h1>MacPatch LDAP/Active Directory Authentication</h1>
+    <h1>LDAP/Active Directory Authentication</h1>
     
     <p><strong>Version 1.0 for MacPatch v2.6.x</strong></p>
 
