--- a/documentation/ldap-configuration.html
+++ b/documentation/ldap-configuration.html
@@ -27,7 +27,7 @@ base_url: "/"
         <ul>
             <li>This item is used to pre populate a domain for samAccountName auth as an example (e.g. myDomain\).</li>
         </ul>
-        <li>Active Directory/LDAP Login User Name Suffix (optional)</li>
+        <li>Active Directory/LDAP <strong>Login User Name Suffix</strong> (optional)</li>
         <ul>
             <li>This item is used to pre populate suffix string if using  “userPrincipalName”</li>
         </ul>
@@ -41,11 +41,9 @@ base_url: "/"
 
     <p>While most LDAP/Active Directory environments have many similar configuration settings each environment has it’s own tweaks. In order to do better filtering on the LDAP queries you might need to modify the ldap filter to achieve what you want.  Once example of this could be to narrow the scope of allowed users by requiring that they belong to a group. To do this you need to edit the “Application.cfc” file located in “/Library/MacPatch /Server/tomcat-mpsite/webapps/ROOT/admin/Application.cfc”. The “filter” string should be located on or around line 299 in the file.</p>
 
-    <p>Default:</p>
-    <p>filter="(&(objectClass=*)(#application.settings.ldap.loginAttr#=#arguments.username##application.settings.ldap.loginUsrSufix#))"</p>
+    <p>Default:<br>filter="(&(objectClass=*)(#application.settings.ldap.loginAttr#=#arguments.username##application.settings.ldap.loginUsrSufix#))"</p>
 
-    <p>With Group (<strong>In Bold</strong>):</p>
-    <p>filter="(&(objectClass=*)(#application.settings.ldap.loginAttr#=#arguments.username##application.settings.ldap.loginUsrSufix#)<strong>(memberOf=CN=MacPatch-Admins,OU=Groups,DC=example,DC=com)</strong>)"</p>
+    <p>With Group (<strong>In Bold</strong>):<br>filter="(&(objectClass=*)(#application.settings.ldap.loginAttr#=#arguments.username##application.settings.ldap.loginUsrSufix#)<strong>(memberOf=CN=MacPatch-Admins,OU=Groups,DC=example,DC=com)</strong>)"</p>
 
     <p>The LDAP settings may also be edited without the use of the “DataBaseLDAPSetup.py” script. To edit these settings open the “/Library/MacPatch/Server/conf/etc/siteconfig.json” file.</p>
 
