--- a/documentation/ldap-configuration.html
+++ b/documentation/ldap-configuration.html
@@ -35,7 +35,8 @@ base_url: "/"
 
     <p>If you choose to use SSL, which is highly recommended then you will need to run the “addRemoteCert.py” script located in “/Library/MacPatch/Server/conf/scripts” directory. This script will download the directory servers certificate and add it to a trusted store only used by the MacPatch server.</p>
 
-    <p><strong>Usage:</strong> sudo addRemoteCert.py –c “dc1.example.com:3269”</p>
+    <p><strong>Usage:</strong></p>
+    <pre>sudo addRemoteCert.py –c “dc1.example.com:3269”</pre>
 
     <h2>Advanced Configuration</h2>
 
