--- a/documentation/vagrant.html
+++ b/documentation/vagrant.html
@@ -16,7 +16,7 @@ base_url: "/"
     <h2>Setup</h2>
 
     <ol>
-        <li>Install <a href="https://docs.vagrantup.com/v2/installation/">Vagrant</a> and [<a href="https://www.virtualbox.org/wiki/Downloads">VirtualBox</a></li>
+        <li>Install <a href="https://docs.vagrantup.com/v2/installation/">Vagrant</a> and <a href="https://www.virtualbox.org/wiki/Downloads">VirtualBox</a></li>
         <li>Clone this repo <code>git clone https://github.com/SMSG-MAC-DEV/MacPatch-Vagrant.git</code></li>
         <li><code>cd</code> into the project directory</li>
         <li>Start the VM by running <code>vagrant up</code></li>
@@ -59,6 +59,6 @@ using the other host only network.
     </p>
 
     <p>Here is the fix <code>VBoxManage dhcpserver remove --netname HostInterfaceNetworking-vboxnet0</code>
-    You can read more about it [here](https://github.com/mitchellh/vagrant/issues/3083)</p>
+    You can read more about it here <a href="https://github.com/mitchellh/vagrant/issues/3083">https://github.com/mitchellh/vagrant/issues/3083</a></p>
 
 </div>
