--- a/documentation/vagrant.html
+++ b/documentation/vagrant.html
@@ -21,6 +21,7 @@ base_url: "/"
         <li><code>cd</code> into the project directory</li>
         <li>Start the VM by running <code>vagrant up</code></li>
     </ol>
+    <p>You now have a built MacPatch sever. Now follow the <a href="{{ page.base_url }}documentation/quickstart-linux.html#console">Configure MacPatch - Admin Console</a> section to complete the setup.</p>
 
     <h2>Possible issues with an SSL proxy</h2>
 
